# applied-GenAI-lab

./: .gitignore  README.md  buddy  buddy_comprehensive_test.py  buddy_results-gpt-oss.jsonl  buddy_results.jsonl  buddy_test_results_comprehensive.json  consolidated_1000_prompts.json  core.html  core.html.md  index.html  index.html.md  main.py  pyproject.toml  robots.txt  run.ipynb  search.json  settings.ini  setup.py  sitemap.xml
.github/workflows/: test.yaml
agentic/: _modidx.py  analyzer.py  client.py  llm_factory.py  schemas.py  tokens.py
agentic/agent/: debater.py  introspector.py  planner.py
agentic/agents/: planner.py
agentic/backend/: analyzer.py  llm_factory.py  schemas.py  tokens.py  tools.py
agentic/configs/: config.toml  loader.py  manager.py  prompt_manager.py  prompts.py
agentic/core/: agent.py  agent2tool.py  execution_loop.py  guardrails.py  handoffs.py
agentic/frontend/: client.py
agentic/llms/: client.py  response_processor.py  streaming_handler.py
agentic/tools/: base.py  code_interpreter.py  code_quality.py  debate.py  debate_agent.py  display.py  doc_generator.py  execute_bash.py  fs_read.py  fs_read_backup.py  fs_write.py  fs_write_backup.py  introspect.py  manager.py  mcp_tools.py  memory.py  planner.py  registry.py  task_executor.py  task_monitor.py  task_planner.py  todo.py
applied_GenAI_lab/: _modidx.py
benchmark/: README.md  TASK_INDEX.md  comprehensive_prompts.txt  prompts.ipynb  test_prompts.md
docs/: AGENTS_AND_TOOLS.md  ARCHITECTURE.md  CONFIGURATION.md  Execution_Flow_Diagram.md  PROJECT_STRUCTURE.md  USAGE.md
learning/: competition.html  competition.md  deep-research.html  langgraph.html  langgraph.md  openai-sdk.html  openai-sdk.md  portfolio-chatboat.html  portfolio-chatboat.md  tool-calling.html  tool-calling.md
nbs/: deep-research.ipynb  index.ipynb  nbdev.yml  openai-sdk.ipynb  sidebar.yml
task_analyzer/: README.md  analyzer.py  main.py  sample_procedure.md  simple_test.md  visualizer.py
(+215 files in other folders)
