[project]
name="agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fuzzywuzzy[speedup]>=0.18.0",
    "langgraph>=0.6.6",
    "markdown>=3.9",
    "mlflow>=3.3.2",
    "nbdev>=2.4.5",
    "openai>=1.104.2",
    "openai-agents>=0.2.11",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pytest>=8.4.2",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "tiktoken>=0.11.0",
    "toml>=0.10.2",
    "weave>=0.52.8",
]

[dependency-groups]
dev = [
    "gradio>=5.44.1",
    "lckr-jupyterlab-variableinspector>=3.2.4",
    "pypdf>=6.0.0",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentic"]  
